frontend: fix guide not using full height
In the Qt app the guide does not spawn over the whole window height
on large screen and looks broken. Medium and small screen are fine.

Current CSS using webkit-fill-available as guide height, but it
should expand to the full height of the window.

--- a/frontends/web/src/components/guide/guide.module.css
+++ b/frontends/web/src/components/guide/guide.module.css
@@ -32,7 +32,7 @@
     color: white;
     height: 100vh;
     /* mobile viewport bug fix */
-    height: -webkit-fill-available;
+    max-height: -webkit-fill-available;
     margin-right: calc(var(--guide-width) * -1);
     overflow-y: auto;
     transition: margin-right 0.2s ease, transform 0.2s ease;
